--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bot-ds",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +8,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
+    "discord.js": "^12.5.3",
     "fs": "0.0.1-security"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NaN-NaN-sempai/Discord_Bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NaN-NaN-sempai/Discord_Bot/issues"
+  },
+  "homepage": "https://github.com/NaN-NaN-sempai/Discord_Bot#readme",
+  "description": ""
 }
