Revert "discord.js update"
This reverts commit e5aa8b2466190e353ab0132f00c416d29c0ab3be.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bot-ds",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,16 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3",
+    "discord.js": "^12.5.1",
     "fs": "0.0.1-security"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NaN-NaN-sempai/Discord_Bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/NaN-NaN-sempai/Discord_Bot/issues"
-  },
-  "homepage": "https://github.com/NaN-NaN-sempai/Discord_Bot#readme",
-  "description": ""
+  }
 }
