--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.6.0",
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
+    "ffmpeg-static": "^4.4.0",
     "fs": "0.0.1-security",
     "minecraft-server-util": "^3.6.0",
-    "ws": "^8.2.3"
+    "ws": "^8.2.3",
+    "yt-search": "^2.10.1",
+    "ytdl-core": "^4.9.1"
   }
 }
